falta guardar las fotos en local

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,15 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      Ionic Blank
+      DawaCamera
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
+    <ion-button (click)="openCamera()">Open Camera</ion-button>
+    <ion-button (click)="openGallery()">Open Gallery</ion-button>
+    <ion-button (click)="geolocationFunction()">Geolocation</ion-button>
   </div>
 </ion-content>
